# livejuke

./: .gitignore  README.md  flake.nix  justfile
api/: .env.example  .gitignore  .rustfmt.toml  .tbls.yaml  Cargo.toml  justfile
api/.github/workflows/: ci.yaml
api/docs/schema/: README.md  public.artists.md  public.authentications.md  public.canonical_releases.md  public.recordings.md  public.release_group_recordings.md  public.release_group_secondary_types.md  public.release_groups.md  public.sessions.md  public.users.md  schema.json
api/migrations/: 0_create_function_update_updated_at.down.sql  0_create_function_update_updated_at.up.sql  20260316231015_create_users.up.sql  20260317000519_create_authentications.up.sql  20260328115740_create_refresh_tokens.up.sql  20260328115740_create_sessions.up.sql  20260331071426_add_column_email_to_users.down.sql  20260331071426_add_column_email_to_users.up.sql  20260507045549_create_artists.up.sql  20260511044411_create_canonical_releases.down.sql  20260511044411_create_canonical_releases.up.sql  20260511061558_create_release_groups.down.sql  20260511061558_create_release_groups.up.sql  20260515070108_create_recordings.up.sql  20260524153441_create_release_group_secondary_types.down.sql  20260524153441_create_release_group_secondary_types.up.sql  20260524161327_create_release_group_recordings.down.sql  20260524161327_create_release_group_recordings.up.sql  20260524161327_create_tracks.up.sql
api/scripts/: import_canonical.sql
api/src/: application.rs  config.rs  domain.rs  infrastructure.rs  main.rs  presentation.rs
api/src/application/: artist.rs  auth.rs  error.rs  traits.rs
api/src/application/artist/: import.rs  service.rs
api/src/application/auth/: config.rs  dto.rs  service.rs
api/src/application/release/: import.rs
api/src/application/release_group/: import.rs  service.rs
api/src/application/services/: auth_service.rs
api/src/application/traits/: access_token_provider.rs  artist_fetcher.rs  email_sender.rs  id_token_verifier.rs  object_store.rs  password_hasher.rs  refresh_token_provider.rs  release_fetcher.rs  release_group_fetcher.rs  token_provider.rs  types.rs  upload_session_store.rs  verification_code_store.rs
api/src/application/user/: service.rs
api/src/domain/: artist.rs  authentication.rs  id.rs  mbid.rs  user.rs
api/src/domain/artist/: model.rs  payload.rs  repository.rs
api/src/domain/authentication/: email.rs  error.rs  model.rs  password.rs  repository.rs
api/src/domain/canonical_release/: model.rs  repository.rs
api/src/domain/models/: user.rs
api/src/domain/recording/: model.rs
api/src/domain/release_group/: model.rs  payload.rs  repository.rs
api/src/domain/repositories/: auth_repository.rs  user_repository.rs
api/src/domain/session/: error.rs  model.rs  repository.rs
api/src/domain/shared/: media_type.rs
api/src/domain/track/: model.rs
api/src/domain/user/: display_name.rs  error.rs  model.rs  repository.rs
api/src/infrastructure/: auth.rs  clock.rs  external.rs  persistence.rs
api/src/infrastructure/auth/: argon2_hasher.rs  jwt_access_token_provider.rs  jwt_token_provider.rs  opaque_refresh_token_provider.rs
api/src/presentation/: cookie.rs  error.rs  error_code.rs  response.rs
(+75 files in other folders)
