[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# web
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tower-http = { version = "0.6", features = ["trace"] }

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# authentication
jsonwebtoken = "10"

# db
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# api
utoipa = { version = "5", features = ["axum_extras"] }

# env
dotenvy = "0.15"

# error
thiserror = "2"
anyhow = "1"

# date
chrono = { version = "0.4", features = ["serde"] }
