[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# web
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
tower-http = { version = "0.6", features = ["trace"] }
tower_governor = "0.8"

# trait
async-trait = "0.1"

# http
reqwest = { version = "0.13", features = ["json"] }

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# authentication
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# db
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# redis
redis = { version = "1.0", features = ["tokio-comp"] }

# regex 
regex = "1.12"

# mail
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# api
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# env
dotenvy = "0.15"

# error
thiserror = "2"
anyhow = "1"

# randow
rand = { version = "0.10", features = ["thread_rng"] }


# encode
base64 = "0.22"

# hex
hex = "0.4"

# hash
sha2 = "0.11"

# validator
nutype = { version = "0.6", features = ["serde", "derive_unsafe"] }

# date
chrono = { version = "0.4", features = ["serde"] }
